--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             <div class="d-flex">
                 <button class="btn btn-primary me-2" id="new-campaign-btn">New Campaign</button>
                 <button class="btn btn-secondary me-2" id="import-btn">Import</button>
-                <button class="btn btn-secondary" id="export-btn">Export</button>
+                <button class="btn btn-secondary me-2" id="export-btn">Export</button>
+                <button class="btn btn-danger" id="delete-storage-btn">Clear Data</button>
             </div>
         </div>
     </nav>
