--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
             <a class="navbar-brand" href="#">Daggerheart Tracker</a>
             <div class="d-flex">
                 <button class="btn btn-primary me-2" id="new-campaign-btn">New Campaign</button>
-                <button class="btn btn-secondary me-2" id="import-btn">Import</button>
-                <button class="btn btn-secondary me-2" id="export-btn">Export</button>
-                <button class="btn btn-danger" id="delete-storage-btn">Clear Data</button>
+                <button class="btn btn-outline-light" id="settings-btn">Settings</button>
             </div>
         </div>
     </nav>
