--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Daggerheart Tracker</a>
             <div class="d-flex">
+                <button class="btn btn-outline-light me-2" id="help-btn"><i class="fas fa-question-circle"></i> Help</button>
                 <button class="btn btn-outline-light" id="settings-btn">Settings</button>
             </div>
         </div>
